# emeralds

./: .gitignore  EMERALDS.ipynb  LICENSE  Makefile  README.md  emeralds.cabal  haskell.hs
